package org.g02.flightsalesfx.businessEntities;

public interface Option {

    /**
     * @return The Name of this Option
     */
    String getName();

    /**
     * @return The price that this FlightOption costs
     */
    double getPrice();

}
