@startuml test
skinparam classAttributeIconSize 0
skinparam componentStyle uml2
'left to right direction
'skinparam linetype polyline
hide circle

class Flight {
    +arrival
    +departure
    +flightnumber
    +price
}

class RecurringFlight extends Flight {
    +interval
}

class PriceReduction {
    +endDate
}
together {
    class StaticPriceReduction extends PriceReduction {
        +percentage
    }

    class DynamicPriceReduction extends PriceReduction {
        +source
    }
}

together {
    class Route {
    }

'    class RouteLeg

    class Airport {
        +name
        +city
        +country
    }
}


class Booking {
    +bookingDate: Date
    +totalPrice
}

class Ticket {
    +name
}

class Plane {
    +name
    +type
    +manufacturer
}

class Seat {
    +seatNumber
    +rowNumber
}

class Option {
    +price
    +name
}

class SeatOption extends Option

class FlightOption extends Option {
    +maxAvailable
}


class Employee {
    +name
    +email
    +password
}

together {
    class SalesOfficer extends Employee
    class SalesManager extends Employee
    class SalesEmployee extends Employee
}



Ticket "*" -- "1" Flight
SalesOfficer "1" --- "*" Flight: \t\t\t
SalesEmployee "1" - "*" Booking: \t
Ticket "1..*" --- "1" Booking
Flight "1..*" -d- "1" Route
Route "*" -- "1" Airport: arrives at port >
Route "*" -- "1" Airport: departs from port >
Flight "1..*" -r- "*" PriceReduction: \t
SeatOption "*" -- "1" Seat: \t
SeatOption "*" - "*" Ticket: chosen
Plane "1" -u- "1..*" Seat: \t
Flight "*" -u- "1" Plane: \t
Ticket "*" - "1" Seat
FlightOption "*" - "1" Flight
FlightOption "*" - "*" Ticket: \t
'Route "*" -l- "*" RouteLeg: \t\t\t\t\t
Route -[hidden] PriceReduction: \t\t\t
'SalesOfficer -[hidden] SalesEmployee: \t
SalesEmployee -l[hidden]- SalesOfficer
SalesOfficer -l[hidden]- SalesManager
@enduml